src/pages/Mainpage/Mainpage.module.css
.section2 {
  padding: 100px 48px;
  display: flex;
}

.cards_section2 {
  display: flex;
}

.left_section2 {
  width: 60%;
  margin-right: 2.8%;
}


.giant_text {
  font-size: 124px;
  font-weight: 500;
  line-height: 110%;
}

.red_giant_text {
  color: #ff5c39;
}
.map_card {
  width: 48%;

  position: relative;
  padding: 5%;
  aspect-ratio: 1.15;
  background-color: #FF5C39;
  margin-right: 4%;
  border-radius: 35px;

  box-sizing: border-box;
  position: relative;
}

.arrow {
  position: absolute;
  right: 3vw;
}

.arrow2 {
  position: absolute;
  right: 3vw;
  top: 3vw;
}

.card_white_text {
  position: absolute;
  bottom: 10%;

  font-weight: 500;
  font-size: 28px;
  color: #FFF9F2;
}

.two_card_white_text {
  position: absolute;
  left: 10%;
  bottom: 20%;

  font-weight: 500;
  font-size: 28px;
  color: #FFF9F2;
}


.two_cards {
  width: 48%;
  aspect-ratio: 1.15;
  height: 100%;
  justify-content: space-evenly; 
  position: relative;
  display: flex;
  flex-direction: column;
  /* background-color: #adadad; */
}

.categories_card_blue {
  margin-bottom: 10%;
  height: 44%;
  background-color: #7A90FF;
  width: 100%;
  position: relative;
  border-radius: 35px;
}

.categories_card_yellow {
  height: 44%;
  background-color: #FFD753; 
  position: relative;
  border-radius: 35px;
}

.right_section2 {
  background-color: #F6ECE1;
  flex: 1 1 auto;

  display: flex;
  align-items: center;
  justify-content: center;

  border-radius: 35px;
}

.section3 {
  height: 100vh;
  background-color: #FF5C39;
  display: flex;
  align-items: center;
  justify-content: center;

}

.red_section_wrapper {
  display: flex;
  margin-top: 18%;
  margin-bottom: 18%;
  margin-left: 8%;
  margin-right: 8%;
}

.left_red_section {
  /* background-color: aqua; */
}

.big_random_text {
  color: #fff;
  font-weight: 500;
  font-size: 110px;
}

.red_section_smaller_text {
  font-weight: 500;
  font-size: 30px;
  color: #fff;
}

.yellow_random_button {
  margin-top: 3.8%;
  width: 281;
  height: 68px;
  background-color: #FFD753;
  border-radius: 30px;

  display: flex;
  align-items: center;
  justify-content: center;

  color: white;
  font-weight: 500;
  font-size: 30px;

  
}

.cardsContainer {
  position: relative;
  width: 511px; 
  height: 636px; 
  margin-left: 500px;
}

.card {
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 50px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.cardLeft {
  transform: rotate(-15deg) translateX(-100px);
  z-index: 1;
}

.cardCenter {
  transform: rotate(0deg) translateX(0);
  z-index: 3; 
}

.cardRight {
  transform: rotate(15deg) translateX(100px);
  z-index: 2;
}

.heroSection {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 4rem 1rem;
  text-align: center;
  position: relative;
}

.textWrapper {
  position: relative;
  z-index: 2; 
  margin-bottom: 2rem;
}

.mainTitle {
  font-size: 96px; 
    color: #000000; 
    font-family: 'Comfortaa', sans-serif;
    margin-bottom: 20px; 
    position: relative;
}

.underline {
  text-decoration: underline;
  font-family: 'Comfortaa', sans-serif;
  text-decoration-color: red;
}

.imageWrapper {
  position: relative;
  z-index: 3; 
  margin-top: -13rem; 
}

.heroImage {
  width: 600px; 
  height: 576px;
}

.subtitle {
  font-size: 1rem;
  color: #000000;
  margin-top: 1rem;
  font-weight: 500;
  position: relative;
  z-index: 2; 
  font-family: 'Comfortaa', sans-serif;
}

